Bug 13345 - vfs_aixacl2.c doesn't compile
Summary: vfs_aixacl2.c doesn't compile
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: Build (show other bugs)
Version: 4.8.0
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Stefan Metzmacher
QA Contact: Samba QA Contact
URL:
Keywords:
: 12982 (view as bug list)
Depends on: 13343
Blocks:
  Show dependency treegraph
 
Reported: 2018-03-21 07:29 UTC by Stefan Metzmacher
Modified: 2019-01-24 01:09 UTC (History)
4 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Stefan Metzmacher 2018-03-21 07:29:02 UTC
The conversion from 'const char *fname' to 'struct smb_filename *fname'
isn't complete.
Comment 1 Stefan Metzmacher 2018-04-25 07:45:49 UTC
Fixed in master and v4-8-test, see #13343
Comment 2 Björn Jacke 2019-01-24 01:09:16 UTC
*** Bug 12982 has been marked as a duplicate of this bug. ***